# found

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
backend/: .env.example  alembic.ini
backend/app/: main.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_batch_verify.py  test_bulk_categories.py  test_bulk_delete.py  test_bulk_tags.py  test_categories.py  test_category_search.py  test_collection_cover.py  test_collections.py  test_cursor_pagination.py  test_foundation.py  test_grid_view.py  test_image_cascade_delete.py  test_image_file.py  test_image_filters.py  test_images.py  test_import.py  test_import_preview.py  test_import_workflow.py  test_metadata.py  test_migrations.py  test_missing_filter.py  test_multi_filter.py  test_relocation.py  test_slice6.py  test_tag_search.py  test_tags.py  test_thumbnails.py
docs/: phase-1-specification.md  phase-1-testslices.md  project-overview.md
docs/architecture/: backend-specification.md  frontend-development-guidelines.md  frontend-restructure.md  frontend-specification.md  frontend-statemdoelspecifcation.md  frontend-ui-layout.md  frontend-uicomponentinventory.md  phase-1-specification.md  phase-2-specification.md  phase-2-statemodelspecification.md  phase-2-ui-layout.md  phase-2-uicomponentinventory.md  project-overview.md  theme-system.md
docs/plans/: filter-dropdown-to-titlebar.md  main-router-refactor.md  moveable-sidepanel.md  qml-simplification.md  theme-system.md
found_app/: __main__.py  requirements.txt
frontend/: __main__.py  requirements.txt  version.py
(+206 files in other folders)
